# CMake configuration file roboop root dir
#

cmake_minimum_required(VERSION 2.6)

PROJECT(roboop)
IF(UNIX)
  IF(NOT APPLE)
    FIND_PACKAGE(Boost)
    INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
  ENDIF(NOT APPLE)
ENDIF(UNIX)
IF(WIN32)
  IF(NOT UNIX)
    IF(NOT MINGW)
      ADD_DEFINITIONS(-D_STANDARD_)
    ENDIF(NOT MINGW)
  ENDIF(NOT UNIX)
ENDIF(WIN32)
SUBDIRS(source newmat)
INCLUDE_DIRECTORIES(source newmat)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
